OP-504 "Userid:" to "User:" per review

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -25,7 +25,7 @@ angal.common.submit.btn.key                                                     
 angal.common.select.row.msg                                                      = Please select a row.
 angal.common.data.not.saved.msg                                                  = The data could not be saved.
 
-angal.common.userid.label                                                        = Userid:
+angal.common.userid.label                                                        = User:
 
 # Login dialog
 angal.login.title                                                                = Login
