OP-504 Change menu labels per review.

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1065,7 +1065,7 @@ angal.menu.btn.exams                                                            
 angal.menu.btn.examtype                                                          = Exam Type
 angal.menu.btn.exit                                                              = Exit
 angal.menu.btn.file                                                              = File
-angal.menu.btn.generaldata                                                       = General Data
+angal.menu.btn.generaldata                                                       = Settings
 angal.menu.btn.groups                                                            = Groups
 angal.menu.btn.help                                                              = Help
 angal.menu.btn.hospital                                                          = Hospital
@@ -1093,7 +1093,7 @@ angal.menu.btn.statistics                                                       
 angal.menu.btn.supplier                                                          = Supplier
 angal.menu.btn.therapy                                                           = Therapy
 angal.menu.btn.types                                                             = Types
-angal.menu.btn.users                                                             = Users
+angal.menu.btn.users                                                             = Users & Groups
 angal.menu.btn.usersusers                                                        = Users
 angal.menu.btn.vaccine                                                           = Vaccine
 angal.menu.btn.vaccinetype                                                       = Vaccine Type
