OP-504 Printing -> Reports

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1086,7 +1086,7 @@ angal.menu.btn.patreport                                                        
 angal.menu.btn.pharmacy                                                          = Pharmacy
 angal.menu.btn.pretreatmenttype                                                  = Pregnant Treatment
 angal.menu.btn.priceslists                                                       = Prices lists
-angal.menu.btn.printing                                                          = Printing
+angal.menu.btn.printing                                                          = Reports
 angal.menu.btn.smsmanager                                                        = SMS Manager
 angal.menu.btn.statistics                                                        = Statistics
 angal.menu.btn.supplier                                                          = Supplier
@@ -1274,7 +1274,7 @@ angal.opd.disease2mayhavebeencancelled                                          
 angal.opd.disease3mayhavebeencancelled                                           = Disease n.3 may have been canceled
 angal.opd.diseasem                                                               = DISEASE
 angal.opd.diseasetype                                                            = Disease Type
-angal.opd.diseasetypem                                                           = Disease Type
+angal.opd.diseasetypem                                                           = DISEASE TYPE
 angal.opd.doyouwanttooverwritethedata                                            = Do you want to overwrite the data?
 angal.opd.duplicatediseasesnotallowed                                            = Duplicate Diseases not allowed
 angal.opd.editopdregistration                                                    = Edit OPD registration
@@ -1297,15 +1297,15 @@ angal.opd.noteandsymptom                                                        
 angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
-angal.opd.opdnumber                                                              = OPD No.
+angal.opd.opdnumber                                                              = OPD NO.
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Out Patient Department
 angal.opd.operation                                                              = Operation
 angal.opd.patient                                                                = OH Patient
-angal.opd.patientid                                                              = Pat.ID
+angal.opd.patientid                                                              = PAT. ID
 angal.opd.patientsearch                                                          = Search
-angal.opd.patientstatus                                                          = Status
+angal.opd.patientstatus                                                          = STATUS
 angal.opd.pleaseinsertattendancedate                                             = Please insert attendance date.
 angal.opd.pleaseinsertavalidattendancedate                                       = please insert a valid attendance date
 angal.opd.pleaseselectadisease                                                   = Please select a disesase
