--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1,4 +1,73 @@
+# Common dialog titles
+angal.common.error.title                                                         = Error
+angal.common.warning.title                                                       = Warning
+angal.common.info.title                                                          = Information
+angal.common.question.title                                                      = Question
+angal.common.plain.title                                                         = Note
 
+# Common button text and short cut keys
+angal.common.cancel.btn                                                          = Cancel
+angal.common.cancel.btn.key                                                      = C
+angal.common.close.btn                                                           = Close
+angal.common.close.btn.key                                                       = C
+angal.common.delete.btn                                                          = Delete
+angal.common.delete.btn.key                                                      = D
+angal.common.edit.btn                                                            = Edit
+angal.common.edit.btn.key                                                        = E
+angal.common.new.btn                                                             = New
+angal.common.new.btn.key                                                         = N
+angal.common.ok.btn                                                              = OK
+angal.common.ok.btn.key                                                          = O
+angal.common.submit.btn                                                          = Submit
+angal.common.submit.btn.key                                                      = S
+
+# Other common messages and text
+angal.common.select.row.msg                                                      = Please select a row.
+angal.common.data.not.saved.msg                                                  = The data could not be saved.
+
+angal.common.userid.label                                                        = User:
+
+# Login dialog
+angal.login.title                                                                = Login
+angal.login.password.label                                                       = Password:
+angal.login.passwordincorrectretry.msg                                           = The password is incorrect; please retry.
+
+# Main Menu
+angal.mainmenu.fmt.title                                                         = User: {0}
+
+# User Browser
+angal.userbrowser.title                                                          = User Browser
+angal.userbrowser.all.txt                                                        = ALL
+angal.userbrowser.resetpassword.btn                                              = Reset Password
+angal.userbrowser.resetpassword.btn.key                                          = R
+angal.userbrowser.user.txt                                                       = User
+angal.userbrowser.group.txt                                                      = Group
+angal.userbrowser.description.txt                                                = Description
+angal.userbrowser.selectgroup.label                                              = Select group:
+angal.userbrowser.newuserrecord.title                                            = Add New User
+angal.userbrowser.editinguserrecord.title                                        = Edit User
+angal.userbrowser.group.label                                                    = Group:
+angal.userbrowser.name.label                                                     = Name:
+angal.userbrowser.password.label                                                 = Password:
+angal.userbrowser.retype.password.label                                          = Retype Password:
+angal.userbrowser.description.label                                              = Description:
+angal.userbrowser.insert.valid.username.msg                                      = Please provide a valid user name.
+angal.userbrowser.insert.password.msg                                            = Please provide a password.
+angal.userbrowser.retype.password.missing.msg                                    = Please provide the 'retype' password.
+angal.userbrowser.password.not.matching.msg                                      = Passwords do not match; please correct.
+angal.userbrowser.reset.password.title                                           = Reset Password
+angal.userbrowser.step1.insert.new.password.label                                = Please insert a new password (minimum of 6 characters).
+angal.userbrowser.password.too.short.msg                                         = Password must be at least 6 characters; please retry.
+angal.userbrowser.step2.repeat.password.label                                    = Please repeat the new password.
+angal.userbrowser.passwords.do.not.match.msg                                     = Passwords do not match; please retry.
+angal.userbrowser.password.changed.msg                                           = The password has been changed.
+angal.userbrowser.delete.user.title                                              = Delete User
+angal.userbrowser.delete.user.fmt.label                                          = Delete user "{0}"?
+
+# User Browser: related messages in CORE project
+angal.userbrowser.user.exists.fmt.msg                                            = The user "{0}" already exists.
+
+# Remaining original key/values that need review/work/etc.
 angal.admission.abortdate                                                        = Abort date
 angal.admission.address                                                          = ADDRESS
 angal.admission.addressm                                                         = Address
@@ -995,9 +1064,9 @@ angal.menu.btn.exams                                                            
 angal.menu.btn.examtype                                                          = Exam Type
 angal.menu.btn.exit                                                              = Exit
 angal.menu.btn.file                                                              = File
-angal.menu.btn.generaldata                                                       = General Data
+angal.menu.btn.generaldata                                                       = Settings
 angal.menu.btn.groups                                                            = Groups
-angal.menu.btn.help                                                              = HELP
+angal.menu.btn.help                                                              = Help
 angal.menu.btn.hospital                                                          = Hospital
 angal.menu.btn.labbrowsing                                                       = Laboratory Browsing
 angal.menu.btn.laboratory                                                        = Laboratory
@@ -1017,13 +1086,13 @@ angal.menu.btn.patreport                                                        
 angal.menu.btn.pharmacy                                                          = Pharmacy
 angal.menu.btn.pretreatmenttype                                                  = Pregnant Treatment
 angal.menu.btn.priceslists                                                       = Prices lists
-angal.menu.btn.printing                                                          = Printing
+angal.menu.btn.printing                                                          = Reports
 angal.menu.btn.smsmanager                                                        = SMS Manager
 angal.menu.btn.statistics                                                        = Statistics
 angal.menu.btn.supplier                                                          = Supplier
 angal.menu.btn.therapy                                                           = Therapy
 angal.menu.btn.types                                                             = Types
-angal.menu.btn.users                                                             = Users
+angal.menu.btn.users                                                             = Users & Groups
 angal.menu.btn.usersusers                                                        = Users
 angal.menu.btn.vaccine                                                           = Vaccine
 angal.menu.btn.vaccinetype                                                       = Vaccine Type
@@ -1039,7 +1108,6 @@ angal.menu.btnpharmstockdischarge                                               
 angal.menu.chat                                                                  = Communication
 angal.menu.class                                                                 = class: 
 angal.menu.deletegroup                                                           = Delete group 
-angal.menu.deleteuser                                                            = Delete user
 angal.menu.deliverytype                                                          = Delivery
 angal.menu.delresulttype                                                         = DeliveryResult
 angal.menu.descm                                                                 = DESC
@@ -1050,7 +1118,6 @@ angal.menu.disease                                                              
 angal.menu.diseaselist                                                           = DiseaseList
 angal.menu.diseasetype                                                           = Disease
 angal.menu.editinggrouprecord                                                    = Editing group record
-angal.menu.editinguserrecord                                                     = Editing user record
 angal.menu.examlist1                                                             = ExamsList
 angal.menu.exams                                                                 = Exams
 angal.menu.examtype                                                              = Exam Type
@@ -1062,10 +1129,9 @@ angal.menu.groupm                                                               
 angal.menu.groupmenu                                                             = GroupMenu
 angal.menu.groups                                                                = Groups
 angal.menu.groupsbrowser                                                         = Groups browser
-angal.menu.help                                                                  = HELP
+angal.menu.help                                                                  = Help
 angal.menu.hospital                                                              = Hospital
 angal.menu.inposition                                                            = in position: 
-angal.menu.invalidpasswordforthisuser                                            = Invalid password for this user.\nPlease reset it in Admin -> File -> Users -> Users -> Reset Password
 angal.menu.isactive                                                              = isActive: 
 angal.menu.isalreadypresent                                                      = is already present.
 angal.menu.issubmenu                                                             = isSubMenu: 
@@ -1082,8 +1148,6 @@ angal.menu.menuitemmainmenu                                                     
 angal.menu.name                                                                  = Name
 angal.menu.newbill                                                               = New Bill
 angal.menu.newgrouprecord                                                        = New group record
-angal.menu.newuserrecord                                                         = New user record
-angal.menu.onepleaseinsertnewpassowrdminsixdigits                                = 1. Please insert new password (min 6 digits)
 angal.menu.opd                                                                   = OPD
 angal.menu.opdchart                                                              = OPD Chart
 angal.menu.operation                                                             = Operation
@@ -1091,41 +1155,28 @@ angal.menu.operationtype                                                        
 angal.menu.otherprices                                                           = Other Prices
 angal.menu.passwdm                                                               = PASSWD
 angal.menu.password                                                              = Password
-angal.menu.passwordincorrectpleaseretype                                         = password incorrect, please retype
-angal.menu.passwordincorrectretry                                                = password incorrect: retry
 angal.menu.patientvaccine                                                        = Patient Vaccins
 angal.menu.patreport                                                             = Launch Report 
 angal.menu.pharmacy                                                              = Pharmacy
-angal.menu.pleaseinsertapassword                                                 = please insert a password
-angal.menu.pleaseinsertavalidpasswordminsixdigits                                = Please insert a valid password (min 6 digits)
 angal.menu.pleaseinsertavalidusergroup                                           = please insert a valid user group
-angal.menu.pleaseinsertavalidusername                                            = please insert a valid user name
-angal.menu.pleaseretypethepassword                                               = please retype the password
 angal.menu.pretreatmenttype                                                      = PregnantTreatment
 angal.menu.priceslists                                                           = Prices Lists
 angal.menu.printing                                                              = Printing
-angal.menu.resetpassword                                                         = Reset Password
-angal.menu.retypeerrorpleaseretry                                                = Retype error, please retry
 angal.menu.retypepassword                                                        = Retype Password
-angal.menu.selectgroup                                                           = Select group
-angal.menu.single                                                                = Single
 angal.menu.smsmanager                                                            = SMS Manager
 angal.menu.statistics                                                            = Statistics
 angal.menu.submenu                                                               = Sub Menu: 
 angal.menu.submit                                                                = Submit
 angal.menu.supplier                                                              = Supplier
 angal.menu.thegroup                                                              = The group
-angal.menu.thepasswordhasbeenchanged                                             = The password has been changed
 angal.menu.theuser                                                               = The user 
 angal.menu.thisgrouphasusers                                                     = this group has users
-angal.menu.twopleaserepeatpassword                                               = 2. Please repeat the password
 angal.menu.type                                                                  = Type
 angal.menu.types                                                                 = Types
 angal.menu.update                                                                = Update
 angal.menu.userm                                                                 = USER
 angal.menu.usermenuitem                                                          = User Menu Item:
 angal.menu.users                                                                 = Users
-angal.menu.usersbrowser                                                          = Users browser
 angal.menu.usersusers                                                            = Users
 angal.menu.vaccine                                                               = Vaccine
 angal.menu.vaccinetype                                                           = Vaccine Type
@@ -1223,7 +1274,7 @@ angal.opd.disease2mayhavebeencancelled                                          
 angal.opd.disease3mayhavebeencancelled                                           = Disease n.3 may have been canceled
 angal.opd.diseasem                                                               = DISEASE
 angal.opd.diseasetype                                                            = Disease Type
-angal.opd.diseasetypem                                                           = Disease Type
+angal.opd.diseasetypem                                                           = DISEASE TYPE
 angal.opd.doyouwanttooverwritethedata                                            = Do you want to overwrite the data?
 angal.opd.duplicatediseasesnotallowed                                            = Duplicate Diseases not allowed
 angal.opd.editopdregistration                                                    = Edit OPD registration
@@ -1246,15 +1297,15 @@ angal.opd.noteandsymptom                                                        
 angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
-angal.opd.opdnumber                                                              = OPD No.
+angal.opd.opdnumber                                                              = OPD NO.
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Out Patient Department
 angal.opd.operation                                                              = Operation
 angal.opd.patient                                                                = OH Patient
-angal.opd.patientid                                                              = Pat.ID
+angal.opd.patientid                                                              = PAT. ID
 angal.opd.patientsearch                                                          = Search
-angal.opd.patientstatus                                                          = Status
+angal.opd.patientstatus                                                          = STATUS
 angal.opd.pleaseinsertattendancedate                                             = Please insert attendance date.
 angal.opd.pleaseinsertavalidattendancedate                                       = please insert a valid attendance date
 angal.opd.pleaseselectadisease                                                   = Please select a disesase
