OP-508 GUI changes for User and Groups browsers

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1,11 +1,15 @@
+#######################
 # Common dialog titles
+#######################
 angal.common.error.title                                                         = Error
 angal.common.warning.title                                                       = Warning
 angal.common.info.title                                                          = Information
 angal.common.question.title                                                      = Question
 angal.common.plain.title                                                         = Note
 
+########################################
 # Common button text and short cut keys
+########################################
 angal.common.cancel.btn                                                          = Cancel
 angal.common.cancel.btn.key                                                      = C
 angal.common.close.btn                                                           = Close
@@ -20,22 +24,33 @@ angal.common.ok.btn                                                             
 angal.common.ok.btn.key                                                          = O
 angal.common.submit.btn                                                          = Submit
 angal.common.submit.btn.key                                                      = S
+angal.common.update.btn                                                          = Update
+angal.common.update.btn.key                                                      = U
 
+#################################
 # Other common messages and text
+#################################
 angal.common.select.row.msg                                                      = Please select a row.
 angal.common.data.not.saved.msg                                                  = The data could not be saved.
 
 angal.common.userid.label                                                        = User:
 
+
+######################
 # Login dialog
+######################
 angal.login.title                                                                = Login
 angal.login.password.label                                                       = Password:
 angal.login.passwordincorrectretry.msg                                           = The password is incorrect; please retry.
 
+######################
 # Main Menu
+######################
 angal.mainmenu.fmt.title                                                         = User: {0}
 
-# User Browser
+#########################
+# Settings: User Browser
+#########################
 angal.userbrowser.title                                                          = User Browser
 angal.userbrowser.all.txt                                                        = ALL
 angal.userbrowser.resetpassword.btn                                              = Reset Password
@@ -66,8 +81,35 @@ angal.userbrowser.delete.user.fmt.label                                         
 
 # User Browser: related messages in CORE project
 angal.userbrowser.user.exists.fmt.msg                                            = The user "{0}" already exists.
+angal.userbrowser.cantdeleteadminuser.msg                                        = The "admin" user cannot be deleted.
 
+###########################
+# Settings: Groups Browser
+##########################
+angal.groupsbrowser.title                                                        = Groups Browser
+angal.groupsbrowser.group.txt                                                    = Group
+angal.groupsbrowser.description.txt                                              = Description
+angal.groupsbrowser.delete.group.title                                           = Delete Group
+angal.groupsbrowser.delete.group.fmt.label                                       = Delete group "{0}"?
+angal.groupsbrowser.groupmenu.btn                                                = GroupMenu
+angal.groupsbrowser.groupmenu.btn.key                                            = M
+angal.groupsbrowser.new.title                                                    = New Group
+angal.groupsbrowser.edit.title                                                   = Edit Group
+angal.groupsbrowser.groupname.label                                              = Group Name:
+angal.groupsbrowser.description.label                                            = Description:
+angal.groupsbrowser.nousergroup.msg                                              = Please insert a valid user group name.
+angal.groupsbrowser.menuitembrowser.title                                        = Menu Item Browser
+angal.groupsbrowser.menuitemmbrowser.root.txt                                    = Main Menu
+
+# Groups Browser: related messages in CORE project
+angal.groupsbrowser.cantdeleteadmingroup.msg                                    = The "admin" group cannot be deleted.
+angal.groupsbrowser.grouphasusers.msg                                           = This group has users and cannot be deleted.
+angal.groupsbrowser.groupexists.fmt.msg                                         = The group "{0}" already exists.
+
+
+##########################################################
 # Remaining original key/values that need review/work/etc.
+##########################################################
 angal.admission.abortdate                                                        = Abort date
 angal.admission.address                                                          = ADDRESS
 angal.admission.addressm                                                         = Address
@@ -1125,15 +1167,11 @@ angal.menu.exit                                                                 
 angal.menu.file                                                                  = File
 angal.menu.generaldata                                                           = GeneralData
 angal.menu.group                                                                 = Group
-angal.menu.groupm                                                                = GROUP
-angal.menu.groupmenu                                                             = GroupMenu
 angal.menu.groups                                                                = Groups
-angal.menu.groupsbrowser                                                         = Groups browser
 angal.menu.help                                                                  = Help
 angal.menu.hospital                                                              = Hospital
 angal.menu.inposition                                                            = in position: 
 angal.menu.isactive                                                              = isActive: 
-angal.menu.isalreadypresent                                                      = is already present.
 angal.menu.issubmenu                                                             = isSubMenu: 
 angal.menu.labbrowsing                                                           = LaboratoryBrowsing
 angal.menu.labelstooltipshort                                                    = Labels,Tooltip,short:
@@ -1143,11 +1181,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Medicals
 angal.menu.medicalsward                                                          = Pharmaceutical Stock Ward
 angal.menu.medstockmovtype                                                       = MedicalsStock Mov
-angal.menu.menuitembrowser                                                       = Menu Item Browser
-angal.menu.menuitemmainmenu                                                      = Main Menu
 angal.menu.name                                                                  = Name
 angal.menu.newbill                                                               = New Bill
-angal.menu.newgrouprecord                                                        = New group record
 angal.menu.opd                                                                   = OPD
 angal.menu.opdchart                                                              = OPD Chart
 angal.menu.operation                                                             = Operation
@@ -1158,7 +1193,6 @@ angal.menu.password                                                             
 angal.menu.patientvaccine                                                        = Patient Vaccins
 angal.menu.patreport                                                             = Launch Report 
 angal.menu.pharmacy                                                              = Pharmacy
-angal.menu.pleaseinsertavalidusergroup                                           = please insert a valid user group
 angal.menu.pretreatmenttype                                                      = PregnantTreatment
 angal.menu.priceslists                                                           = Prices Lists
 angal.menu.printing                                                              = Printing
@@ -1168,9 +1202,7 @@ angal.menu.statistics                                                           
 angal.menu.submenu                                                               = Sub Menu: 
 angal.menu.submit                                                                = Submit
 angal.menu.supplier                                                              = Supplier
-angal.menu.thegroup                                                              = The group
 angal.menu.theuser                                                               = The user 
-angal.menu.thisgrouphasusers                                                     = this group has users
 angal.menu.type                                                                  = Type
 angal.menu.types                                                                 = Types
 angal.menu.update                                                                = Update
@@ -1183,8 +1215,6 @@ angal.menu.vaccinetype                                                          
 angal.menu.visits                                                                = Visits
 angal.menu.ward                                                                  = Ward
 angal.menu.worksheet                                                             = Worksheet
-angal.menu.youcantdeleteadminuser                                                = You can't delete 'admin' user
-angal.menu.youcantdeletegroupadmin                                               = You can't delete 'admin' user
 angal.newbill.amount                                                             = Amount
 angal.newbill.balancem                                                           = BALANCE
 angal.newbill.billdateafterfirstpayment                                          = Bill date after first payment
