Fixed one label

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1332,7 +1332,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Out Patient Department
 angal.opd.operation                                                              = Operation
-angal.opd.patient                                                                = OH Patient
+angal.opd.patient                                                                = Patient
 angal.opd.patientid                                                              = PAT. ID
 angal.opd.patientsearch                                                          = Search
 angal.opd.patientstatus                                                          = STATUS
